precompiles/macro/tests/compile-fail/precompile/pre-check/no-parameter.stderr
error: Precompile methods must have at least 1 parameter (the PrecompileHandle)
  --> tests/compile-fail/precompile/pre-check/no-parameter.rs:26:2
   |
26 |     fn pre_check() {
   |     ^^^^^^^^^^^^^^
